SERVER-4928 Assert when type for regex pattern is not RegEx or String